--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,19 +1,3 @@
-#<h1>{{ question.question_text }}</h1>
-#{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-
-
-
-#<form action="{% url 'polls:vote' question.id %}" method="post">
-#    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
-#    {% csrf_token %}
- #   {% for choice in question.choice_set.all %}
-#        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-#        <label form="choice{{ forloop.counter }}">{{ choice.choice_text {}}</label><br />
-#    {% endfor %}
-#    <input type="submit" value="vote" />
-#</form>
-
-
 <h1>{{ question.question_text }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -21,8 +5,11 @@
 <form action="{% url 'polls:vote' question.id %}" method="post">
 {% csrf_token %}
 {% for choice in question.choice_set.all %}
+
+
+    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
     <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br />
 {% endfor %}
-<input type="submit" value="Vote" />
+    <br>
+<input type="submit" value="Vote" /> </br>
 </form>
